objects/FSL_Skip_Day__mdt.object
<CustomObject>
    <fields>
        <fullName>Day_Off__c</fullName>
        <label>Day Off</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealership_Id__c</fullName>
        <label>Dealership Id</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL_Work_Type_Data__c</fullName>
        <label>FSL Work Type Data</label>
        <referenceTo>FSL_Work_Type_Data__mdt</referenceTo>
        <relationshipLabel>FSL Skip Days</relationshipLabel>
        <relationshipName>FSL_Skip_Days</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <label>FSL Skip Day</label>
    <listViews>
        <fullName>All_Main</fullName>
        <columns>MasterLabel</columns>
        <columns>FSL_Work_Type_Data__c</columns>
        <columns>Day_Off__c</columns>
        <columns>Dealership_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All (Main)</label>
    </listViews>
    <pluralLabel>FSL Skip Days</pluralLabel>
</CustomObject>